--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "lasangreesroja",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "edudb": "^1.3.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "uuid-js": "^0.7.5"
-  }
+  },
+  "devDependencies": {}
 }
